--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@supabase/supabase-js": "^2.39.0",
     "@types/file-saver": "^2.0.7",
+    "@xenova/transformers": "^2.17.2",
     "crypto-js": "^4.2.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.22",
