--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,11 @@ SMTP_PORT=587
 SMTP_USER=your_email@gmail.com
 SMTP_PASS=your_app_password_here
 HR_EMAIL=primoboostai@gmail.com
+
+# External Browser Service Configuration (for Auto-Apply feature)
+# Leave empty to use mock/simulation mode for development
+# For production, set to your external browser automation service URL
+VITE_EXTERNAL_BROWSER_SERVICE_URL=
+VITE_EXTERNAL_BROWSER_API_KEY=
+EXTERNAL_BROWSER_SERVICE_URL=
+EXTERNAL_SERVICE_API_KEY=
