--- a/.env.example
+++ b/.env.example
@@ -57,10 +57,51 @@ SMTP_USER=your_email@gmail.com
 SMTP_PASS=your_app_password_here
 HR_EMAIL=primoboostai@gmail.com
 
-# External Browser Service Configuration (for Auto-Apply feature)
-# Leave empty to use mock/simulation mode for development
-# For production, set to your external browser automation service URL
+# ========================================
+# BROWSERLESS / PLAYWRIGHT AUTOMATION
+# ========================================
+# Remote Browserless WebSocket endpoint for Playwright browser automation
+# Example: wss://chrome.browserless.io?token=YOUR_TOKEN
+# Leave empty to use simulation mode for development
+BROWSER_WS=
+
+# Browser automation timeout in milliseconds (default: 60000 = 60 seconds)
+BROWSER_TIMEOUT=60000
+
+# Run browser in headless mode (true for production, false for debugging)
+BROWSER_HEADLESS=true
+
+# ========================================
+# AI ENGINE (RESUME OPTIMIZATION)
+# ========================================
+# AI API key for resume optimization and project suggestions
+# Supports OpenRouter, Gemini, or OpenAI-compatible endpoints
+AI_API_KEY=
+
+# AI model name for optimization tasks
+# Examples: google/gemini-2.0-flash-exp, openai/gpt-4o, anthropic/claude-3.5-sonnet
+AI_MODEL_NAME=google/gemini-2.0-flash-exp
+
+# AI provider base URL (optional, defaults to OpenRouter)
+AI_BASE_URL=https://openrouter.ai/api/v1
+
+# ========================================
+# EXTERNAL BROWSER SERVICE (LEGACY)
+# ========================================
+# For custom browser automation service integration
+# Leave empty to use Browserless/Playwright automation
 VITE_EXTERNAL_BROWSER_SERVICE_URL=
 VITE_EXTERNAL_BROWSER_API_KEY=
 EXTERNAL_BROWSER_SERVICE_URL=
 EXTERNAL_SERVICE_API_KEY=
+
+# ========================================
+# PLATFORM INTEGRATION (OPTIONAL)
+# ========================================
+# Default Workday portal URL for auto-apply fallback
+WORKDAY_BASE_URL=https://workday.wd5.myworkdayjobs.com
+
+# LinkedIn credentials (OPTIONAL - for LinkedIn Easy Apply automation)
+# WARNING: Store credentials securely, use at your own risk
+LINKEDIN_LOGIN_EMAIL=
+LINKEDIN_LOGIN_PASS=
