--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ VITE_NETLIFY_API_TOKEN=your_netlify_api_token_here
 
 # Razorpay Configuration (Frontend)
 VITE_RAZORPAY_KEY_ID=rzp_live_U7N6E8ot31tiej
+VITE_RAZORPAY_TEST_KEY_ID=rzp_test_yourtestkeyhere
+VITE_RAZORPAY_TEST_MODE=false
+VITE_FAKE_PAYMENT=false
 
 # Plan Pricing Configuration
 VITE_PLAN_HOURLY_PRICE=19
